fix: collapsed state change bug fix and some styling clean up

--- a/src/modules/dataGrid.scss
+++ b/src/modules/dataGrid.scss
@@ -26,18 +26,25 @@ $blackAlpha: rgba(0, 0, 0, .5);
         }
         &_table_component {
             .table-cell:last-child {
-                padding-right: inherit;
+                padding-right: 11px !important;
             }
             .table-header-cell:last-child {
-                padding-right: inherit;
-                .table-header-handle {
-                    cursor: pointer;
-                    float: right;
-                    position: relative;
-                    .ui.icon-size-small {
-                        width: 5px;
-                        svg {
+                padding-right: 11px !important;
+                position: relative;
+                .#{$prefixDrawerDataGrid}, .#{$prefixPageDataGrid}  {
+                    &_table_header_handle {
+                        cursor: pointer;
+                        height: 14px;
+                        left: auto !important;
+                        margin-top: -7px;
+                        position: absolute;
+                        top: 50%;
+                        right: 0;
+                        .ui.icon-size-small {
                             width: 5px;
+                            svg {
+                                width: 5px;
+                            }
                         }
                     }
                 }
